# sqlite_bench

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE
.github/workflows/: on-full-build.yml
app/: CMakeLists.txt  main.cpp
app/include/: benchmark.hpp  benchmarkSenOne.hpp  benchmarkSenTwo.hpp
app/inclue/: benchmark.hpp
app/src/: benchmarkSenOne.cpp  benchmarkSenTwo.cpp
cmake/: version.cmake
conf/: db.ini
db/: sehmafirst.db  sehmasecond.db
include/: databank.hpp
scripts/: deploy_to_target.sh
src/: databank.cpp  version.h.in
test/unit-test/: CMakeLists.txt  main.cpp  test_api.cpp  test_config.cpp  test_query.cpp
test/unit-test/conf/: invalid_backend.ini  invalid_path.ini  test.ini
